apps/skooner/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: skooner
  labels:
    app.kubernetes.io/name: skooner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: skooner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skooner
    spec:
      containers:
      - name: skooner
        image: ghcr.io/skooner-k8s/skooner:stable
        ports:
          - name: http
            containerPort: 4654
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 4654
          initialDelaySeconds: 30
          timeoutSeconds: 30
      nodeSelector:
        'beta.kubernetes.io/os': linux
