apps/skooner/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: skooner
  labels:
    app.kubernetes.io/name: skooner
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 4654
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: skooner
