apps/skooner/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skooner
  labels:
    app.kubernetes.io/name: skooner
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://transmissionbt.com/assets/images/Transmission_icon.png"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.${CLUSTER_DOMAIN_NAME}
    secretName: internal-ingress-cert
  rules:
  - host: dashboard.${CLUSTER_DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skooner
            port:
              name: http
